# docs/openapi.json
@@ -10,9 +10,30 @@
     "/api/.well-known/openid-configuration": {
       "get": {
         "description": "Returns the OpenID configuration for the REANA server.",
+        "operationId": "get_openid_configuration",
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "200": {
-            "description": "OpenID configuration"
+            "description": "OpenID configuration",
+            "schema": {
+              "properties": {
+                "authorization_endpoint": {
+                  "type": "string"
+                },
+                "device_authorization_endpoint": {
+                  "type": "string"
+                },
+                "reana_client_id": {
+                  "type": "string"
+                },
+                "token_endpoint": {
+                  "type": "string"
+                }
+              },
+              "type": "object"
+            }
           },
           "404": {
             "description": "OpenID configuration not found"
