# reana_server/rest/auth.py
@@ -25,16 +25,31 @@ def get_openid_configuration():
       summary: Get OpenID Configuration
       description: >-
         Returns the OpenID configuration for the REANA server.
+      operationId: get_openid_configuration
+      produces:
+       - application/json
       responses:
-        '200':
+        200:
           description: >-
             OpenID configuration
+          schema:
+            type: object
+            properties:
+              device_authorization_endpoint:
+                type: string
+              authorization_endpoint:
+                type: string
+              token_endpoint:
+                type: string
+              reana_client_id:
+                type: string
         '404':
           description: OpenID configuration not found
         '500':
           description: Internal server error
     """
     try:
+        # TODO The env location will be changed after `reana-server` jwt PR is merged and env variable structure agreed
         url = REANA_AUTH["openid"]["config_url"]
 
         if not url:
@@ -43,6 +58,9 @@ def get_openid_configuration():
         if response.status_code == 404:
             return jsonify({"message": "OpenID configuration not found"}), 404
         response.raise_for_status()
-        return jsonify(response.json()), 200
+        openid_config = response.json()
+        openid_config["reana_client_id"] = REANA_AUTH["client_id"]
+
+        return jsonify(openid_config), 200
     except requests.RequestException:
         return jsonify({"message": "Failed to fetch OpenID configuration"}), 502
